# JSON_parser_playlist

./: .HTML_files\master.html  Album.cpp  Album.hpp  AlbumImage.cpp  AlbumImage.hpp  AlbumImages.cpp  AlbumImages.hpp  Albums.cpp  Albums.hpp  Artist.cpp  Artist.hpp  ArtistImage.cpp  ArtistImage.hpp  ArtistImages.cpp  ArtistImages.hpp  Artists.cpp  Artists.hpp  CMakeLists.txt  JSONArray.cpp  JSONArray.hpp  JSONDataObject.cpp  JSONDataObject.hpp  Pair.cpp  Pair.hpp  README.txt  README.txt~  Tokenizer.cpp  Tokenizer.hpp  Track.cpp  Track.hpp  Tracks.cpp  Tracks.hpp  WriteHTML.cpp  WriteHTML.hpp  album.html  albumImages.json  albums.json  artist.html  artistImages.json  artists.json  (+3 more)
